# backward-responsibility

./: .gitignore  Cargo.toml  readme.md
experiments/: readme.html  readme.md
experiments/brp/: benchmark_grouped  benchmark_individual  benchmark_individual_reproducible  benchmark_reproducible  brp_N_64_MAX_5.ce  brp_N_64_MAX_5.lab  brp_N_64_MAX_5.prism  brp_N_64_MAX_5.sta  brp_N_64_MAX_5.tra  readme.html  readme.md
experiments/dining_philosophers/: dining_philosophers.ce  dining_philosophers.lab  dining_philosophers.prism  dining_philosophers.sta  dining_philosophers.tra  readme.html  readme.md
experiments/dresden_misrouted_train/: dresden_railways.ce  dresden_railways.lab  dresden_railways.prism  dresden_railways.sta  dresden_railways.tra  readme.html  readme.md
experiments/peg_solitaire/: peg_solitaire.ce  peg_solitaire.lab  peg_solitaire.prism  peg_solitaire.sta  peg_solitaire.tra  readme.html  readme.md
experiments/stochastic_benchmarking/: benchmarks  benchmarks_reproducible  readme.html  readme.md
experiments/stochastic_benchmarking/alternating_bit/: benchmark  (+6 more)
experiments/train_grouped/: readme.html  readme.md  train_grouped.ce  train_grouped.lab  train_grouped.prism  train_grouped.sta  train_grouped.tra
experiments/train_intro/: readme.html  readme.md  train_intro.ce  train_intro.lab  train_intro.prism  train_intro.sta  train_intro.tra
src/: benchmarking.rs  cli.rs  main.rs
src/game/: mod.rs  super_attractor.rs
src/prism/: mod.rs  runner.rs  transition_system_parser.rs
src/shapley/: game_solving.rs  mod.rs
src/transition_systems/: mod.rs
(+62 files in other folders)
